--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,5 @@ if (OPENMP_FOUND)
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
 
-add_executable( DISPAR main.cpp tournament.cpp dispar.cpp)
-target_link_libraries( Carnation )
+add_executable( DISPAR main.cpp)
+target_link_libraries( DISPAR )
